# sphere-n-rs

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  IFLOW.md  README.md  cached_ai.rs  default.profdata  default.profraw  discrep_ai.rs  exp_sphere3_ai.rs  sphere_n_ai.rs  sphere_n_ai2.rs  temp.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: tarpaulin.yml.bak
benches/: sphere_bench.rs
src/: cylind_n.rs  lds.trs  lds_n.rs  lib.rs  main.trs  sphere_n.rs
