[package]
name = "sphere-n-rs"
version = "0.1.5"
edition = "2021"
description = "N-Sphere Code Generation in Rust"
repository = "https://github.com/luk036/sphere-n-rs"
license = "MIT OR Apache-2.0"

[dependencies]
ndarray = "0.16.1"
lazy_static = "1.5.0"
interp = "2.1.1"
lds-rs = "0.1.6"

[dev-dependencies]
approx_eq = "0.1.8"
criterion = "0.5"

[[bench]]
name = "sphere_bench"
harness = false