[package]
name = "sphere-n-rs"
version = "0.1.6"
edition = "2021"
description = "N-Sphere Code Generation in Rust"
repository = "https://github.com/luk036/sphere-n-rs"
license = "MIT OR Apache-2.0"

[dependencies]
ndarray = "0.17.2"
lazy_static = "1.5.0"
interp = "2.1.2"
lds-rs = "0.1.6"
svgbobdoc = { version = "0.3", optional = true, features = ["enable"] }

[features]
doc-images = ["dep:svgbobdoc"]

[package.metadata.docs.rs]
features = ["doc-images"]

[dev-dependencies]
approx_eq = "0.1.8"
criterion = "0.8.2"

[[bench]]
name = "sphere_bench"
harness = false